--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
   <h1 id="title">Survey Form</h1>
   <p id="description">Fill The Form</p>
+  <form id='survey-form'>
+     <input type='text' id='name'>
+  </form>
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <script  src="js/index.js"></script>
