--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p id="description">Fill The Form</p>
   <form id='survey-form'>
      <input type='text' id='name'>
+     <input type="email" name="" id="email" required>
   </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
