--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <h1 id="title">Survey Form</h1>
   <p id="description">Fill The Form</p>
   <form id='survey-form'>
-     <input type='text' id='name'>
+     <input type='text' id='name' required>
      <input type="email" name="" id="email" required>
+     <input type='number' id='number' required>
   </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
