--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <h1 id="title">Survey Form</h1>
   <p id="description">Fill The Form</p>
   <form id='survey-form'>
+    <label for="name" id="name-label">Name:</label>
      <input type='text' id='name' required>
+     <label for="name" id="email-label">Email:</label>
      <input type="email" name="" id="email" required>
-     <input type='number' id='number' required>
+     <label for="name" id="number-label">Phone Number:</label>
+     <input type='number' id='number' min="5" max="10" required>
   </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
