--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
        <option value="Country">Albania</option> 
        <option value="Country">DRC</option> 
      </select>
+     <input type="radio" name="freecodecamp"  value="definately" id="">
+<label for="html">Definately</label><br>
+<input type="radio" name="freecodecamp"  value="maybe" id="">
+<label for="css">Maybe</label><br>
+     <input type="checkbox" name="Apple"  value="Apple" id="">
+<label for="html">Apple</label><br>
+<input type="radio" name="Orange"  value="Orange" id="">
+<label for="css">Orange</label><br>
 
+     
   </form>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
