Add textarea and button

--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
        <option value="Country">DRC</option> 
      </select>
      <input type="radio" name="freecodecamp"  value="definately" id="">
-<label for="html">Definately</label><br>
-<input type="radio" name="freecodecamp"  value="maybe" id="">
-<label for="css">Maybe</label><br>
-     <input type="checkbox" name="Apple"  value="Apple" id="">
-<label for="html">Apple</label><br>
-<input type="radio" name="Orange"  value="Orange" id="">
-<label for="css">Orange</label><br>
+     <label for="html">Definately</label><br>
+       <input type="radio" name="freecodecamp"  value="maybe" id="">
+     <label for="css">Maybe</label><br>
+       <input type="checkbox" name="Apple"  value="Apple" id="">
+     <label for="html">Apple</label><br>
+       <input type="radio" name="Orange"  value="Orange" id="">
+     <label for="css">Orange</label><br>
+     <textarea id="comments" name="comment" placeholder="Enter your comment here..."></textarea> 
+     <button type="submit" id="submit">
+            Submit
+     </button>
 
      
   </form>
