--- a/index.html
+++ b/index.html
@@ -23,19 +23,23 @@
        <option value="Country">Albania</option> 
        <option value="Country">DRC</option> 
      </select>
-     <input type="radio" name="freecodecamp"  value="definately" id="">
-     <label for="html">Definately</label><br>
-       <input type="radio" name="freecodecamp"  value="maybe" id="">
+     <select>
+       <input type="radio" name="freecodecamp"  value="definately" id="">
+       <label for="html">Definately</label><br>
+         <input type="radio" name="freecodecamp"  value="maybe" id="">
      <label for="css">Maybe</label><br>
+     </select>
+     <select>
        <input type="checkbox" name="Apple"  value="Apple" id="">
-     <label for="html">Apple</label><br>
+       <label for="html">Apple</label><br>
        <input type="radio" name="Orange"  value="Orange" id="">
-     <label for="css">Orange</label><br>
+       <label for="css">Orange</label><br>
+    </select>
      <textarea id="comments" name="comment" placeholder="Enter your comment here..."></textarea> 
      <button type="submit" id="submit">
             Submit
      </button>
-
+     
      
   </form>
 
