Add label, radio, value and input

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
        <option value="Country">Albania</option> 
        <option value="Country">DRC</option> 
      </select>
-     <select>
-       <input type="radio" name="freecodecamp"  value="definately" id="">
-       <label for="html">Definately</label><br>
-         <input type="radio" name="freecodecamp"  value="maybe" id="">
-     <label for="css">Maybe</label><br>
-     </select>
-     <select>
-       <input type="checkbox" name="Apple"  value="Apple" id="">
-       <label for="html">Apple</label><br>
-       <input type="radio" name="Orange"  value="Orange" id="">
-       <label for="css">Orange</label><br>
-    </select>
+     <label>
+      <input name="user-command" value="definitely" type="radio" class="input-radio">
+      "Definitely"
+     </label> 
+     <label>
+      <input name="user-command" value="maybe" type="radio" class="input-radio">
+      "Maybe"
+     </label> 
+     <label>
+      <input name="user-command" value="not-sure" type="radio" class="input-radio">
+      "Not sure"
+     </label> 
      <textarea id="comments" name="comment" placeholder="Enter your comment here..."></textarea> 
      <button type="submit" id="submit">
             Submit
