--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
        <option value="Country">DRC</option> 
      </select>
      <label>
-      <input name="user-command" value="definitely" type="radio" class="input-radio">
+      <input name="user-command" value="definitely" type="radio" >
       "Definitely"
      </label> 
      <label>
-      <input name="user-command" value="maybe" type="radio" class="input-radio">
+      <input name="user-command" value="maybe" type="radio" >
       "Maybe"
      </label> 
      <label>
-      <input name="user-command" value="not-sure" type="radio" class="input-radio">
+      <input name="user-command" value="not-sure" type="radio">
       "Not sure"
      </label> 
      <textarea id="comments" name="comment" placeholder="Enter your comment here..."></textarea> 
